<resources>
    <string name="app_name">MobileDevelopmentCourseLabApp</string>
    <string name="title_article">Статья</string>
    <string name="title_second">Второй</string>
    <string name="title_third">Третий</string>
    <string name="infoTitle">Информация</string>
    <string name="ageTitle">Возраст</string>
    <string name="age29">29 лет</string>
    <string name="positionTitle">Позиция</string>
    <string name="positionValues">Центровой</string>
    <string name="teamTitle">Команда</string>
    <string name="teamValue">ЦСКА</string>
    <string name="age_pattern">Возраст: %d %s</string>
    <string name="Stat">Статистика выступлений</string>
    <string name="manyGame">32 игр</string>
    <string name="gol">1 гол</string>
    <string name="pass">6 передач</string>
    <string name="yellow">1 желтая</string>
    <string name="red">3 красных</string>
    <string name="name">Иван Иванович Иванов</string>
    <string name="number">10</string>

    <plurals name="age">
        <item quantity="one">год</item>
        <item quantity="few">года</item>
        <item quantity="many">лет</item>
        <item quantity="other">лет</item>
    </plurals>
</resources>